# ConveyorBelts

./: .gitignore  CMakeLists.txt  README.md  gcovr.cfg  meson.build  sonar-project.properties
.github/workflows/: default.yaml
include/: meson.build  return5.h
include/belt/: belt.h  ibelt.h
include/belt-factory/: belt-factory.h  ibelt-factory.h
include/belt-room/: belt-room.h  ibelt-room.h
include/displayer/: displayer.h  idisplayer.h
include/input-dispatcher/: iinput-dispatcher.h  input-dispatcher.h
include/luggage/: luggage.h
include/mutexed-variable/: mutexed-variable.h
include/utils/: my-getch.h
src/: main.cpp  meson.build  return5.cpp
src/belt/: belt.cpp
src/belt-factory/: belt-factory.cpp
src/belt-room/: belt-room.cpp
src/displayer/: displayer.cpp
src/input-dispatcher/: input-dispatcher.cpp
src/utils/: my-getch.cpp
test/: meson.build  test_return5.cpp
test/belt/: test_belt.cpp
test/belt-factory/: test_belt-factory.cpp
test/belt-room/: test_belt-room.cpp
test/mutexed-variable/: test_mutexed-variable.cpp
